# SparkSpeech

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: README.md  development-workflow.md  implementation-status.md  product-design.md  release-0.1.0.md  release-0.1.1.md  release-0.1.2.md  release-0.1.3.md  release-0.1.4.md  release-0.1.5.md  release-0.1.6.md  release-0.1.7.md  release-0.1.8.md  roadmap.md
docs/references/: design-doc-notion.md  doubao-asr-intro.md  openrouter-api.md
scripts/: release.ps1
src/: App.tsx  Overlay.tsx  main.tsx  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs  recorder.rs  services.rs  shortcut.rs  storage.rs
